Improve legibility for labels. Fixes #5.

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -531,7 +531,7 @@ $tooltip-arrow-color:         $tooltip-bg
 //##
 
 //* Default label background color
-$label-default-bg:            $gray-dark
+$label-default-bg:            lighten($brand-primary, 10%)
 //* Primary label background color
 $label-primary-bg:            $brand-primary
 //* Success label background color
