--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -44,7 +44,7 @@ body
 
   // All styles that is related to heights of sticky bar
   =set-heights($line-count)
-    $h:$line-count * $line-height
+    $h: $line-count * $line-height
     height: $h
 
     // The element after #header should have enough margin-top
@@ -240,6 +240,7 @@ body
 
     .label
       margin-right: 0.25em // Add space
+      letter-spacing: 1px
 
     .content
       display: inline
